--- a/app/views/templates/footer.template.html
+++ b/app/views/templates/footer.template.html
@@ -1,4 +1,275 @@
-<div class="footer jumbotron col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-bottom: 0px;">
-		<center><h2>Trang web bất động sản</h2></center>
-		<center class="">© 2016 Simple Footer. All Rights Reserved </center>	
-</divv>
+	$stateProvider
+	.state('home', {
+		views:{
+			"homepage":{
+				url: '/',
+				templateUrl: 'views/users/home.template.html'						
+			}
+		}
+	})
+	.state('them-dong-vat', {
+		views:{
+			"sectionpage": {
+				url: '/dong-vat',
+				templateUrl: 'views/users/add-animal-form.template.html',
+				controller: 'AnimalFormCtrl',
+				access : {
+					sample : "dongvat",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('them-thuc-vat', {
+		views:{
+			"sectionpage": {
+				url: '/thuc-vat',
+				templateUrl: 'views/users/add-vegetable-form.template.html',
+				controller: 'VegetableFormCtrl',
+				access : {
+					sample : "thucvat",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('them-dia-chat', {
+		views:{
+			"sectionpage": {
+				url: '/dia-chat',
+				templateUrl: 'views/users/add-geological-form.template.html',
+				controller: 'GeologicalFormCtrl',
+				access : {
+					sample : "diachat",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('them-tho-nhuong', {
+		views:{
+			"sectionpage": {
+				url: '/tho-nhuong',
+				templateUrl: 'views/users/add-land-form.template.html',
+				controller: 'LandFormCtrl',
+				access : {
+					sample : "thonhuong",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('them-co-sinh', {
+		views:{
+			"sectionpage": {
+				url: '/co-sinh',
+				templateUrl: 'views/users/add-paleontological-form.template.html',
+				controller: 'PaleontologicalFormCtrl',
+				access : {
+					sample : "cosinh",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('chinh-sua-dong-vat', {
+		views:{
+			"sectionpage": {
+				url: '/dong-vat/chinh-sua/:id',
+				templateUrl: 'views/users/edit/edit-animal-form.template.html',
+				controller: 'EditAnimalFormCtrl',
+				access : {
+					sample : "dongvat",
+					action : "edit",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('chinh-sua-thuc-vat', {
+		views:{
+			"sectionpage": {
+				url: '/thuc-vat/chinh-sua/:id',
+				templateUrl: 'views/users/edit/edit-vegetable-form.template.html',
+				controller: 'EditVegetableFormCtrl',
+				access : {
+					sample : "thucvat",
+					action : "edit",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('chinh-sua-co-sinh', {
+		views:{
+			"sectionpage": {
+				url: '/co-sinh/chinh-sua/:id',
+				templateUrl: 'views/users/edit/edit-paleontological-form.template.html',
+				controller: 'EditPaleontologicalFormCtrl',
+				access : {
+					sample : "cosinh",
+					action : "edit",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('chinh-sua-tho-nhuong', {
+		views:{
+			"sectionpage": {
+				url: '/tho-nhuong/chinh-sua/:id',
+				templateUrl: 'views/users/edit/edit-land-form.template.html',
+				controller: 'EditLandFormCtrl',
+				access : {
+					sample : "thonhuong",
+					action : "edit",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}
+	})
+	.state('chinh-sua-dia-chat', {
+		views:{
+			"sectionpage": {
+				url: '/dia-chat/chinh-sua/:id',
+				templateUrl: 'views/users/edit/edit-geological-form.template.html',
+				controller: 'EditGeologicalFormCtrl',
+				access : {
+					sample : "diachat",
+					action : "edit",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}		
+	})
+	.state('quan-ly', {
+		views:{
+			"sectionpage": {
+				url: '/quan-ly-mau',
+				templateUrl: 'views/users/manage-post/manage.template.html'
+			}
+		}
+	})
+	.state('quan-ly-dong-vat', {
+		views:{
+			"sectionpage": {
+				url: '/quan-ly-mau/dong-vat',
+				templateUrl: 'views/users/manage-post/manage-post.template.html',
+				controller: 'ManageContentController',
+				access : {
+					sample : "dongvat",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}		
+	})
+	.state('quan-ly-thuc-vat', {
+		views:{
+			"sectionpage": {
+				url: '/quan-ly-mau/thuc-vat',
+				templateUrl: 'views/users/manage-post/manage-post.template.html',
+				controller: 'ManageContentController',
+				// controller: 'VegetableManageController',
+				access : {
+					sample : "thucvat",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}		
+	})
+	.state('quan-ly-tho-nhuong', {
+		views:{
+			"sectionpage": {
+				url: '/quan-ly-mau/tho-nhuong',
+				templateUrl: 'views/users/manage-post/manage-post.template.html',
+				controller: 'ManageContentController',
+				// controller: 'LandManageController',
+				access : {
+					sample : "thonhuong",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}		
+	})
+	.state('quan-ly-dia-chat', {
+		views:{
+			"sectionpage": {
+				url: '/quan-ly-mau/dia-chat',
+				templateUrl: 'views/users/manage-post/manage-post.template.html',
+				controller: 'ManageContentController',
+				// controller: 'GeologicalManageController',
+				access : {
+					sample : "diachat",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}		
+	})
+	.state('quan-ly-co-sinh', {
+		views:{
+			"sectionpage": {
+				url: '/quan-ly-mau/co-sinh',
+				templateUrl: 'views/users/manage-post/manage-post.template.html',
+				controller: 'ManageContentController',
+				// controller: 'PaleontologicalManageController',
+				access : {
+					sample : "cosinh",
+					action : "create",
+					redirectTo: "home",
+					restrict: true
+				}
+			}
+		}		
+	})
+	.state('guest-test', {
+		views:{
+			"sectionpage": {
+				url: '/guest/test',
+				templateUrl: 'views/guest/test.template.html',
+				controller: 'OfflineCtrl'		
+			}
+		}		
+	})
+	.state('leaflet-map', {
+		views:{
+			"sectionpage": {
+				url: '/map',
+				templateUrl : 'views/map/leaflet-map.html',
+				controller: 'LeafletMapController'
+			}
+		}		
+	})
+	.state('error-page', {
+		views:{
+			"sectionpage": {
+				url: '/loi-trang',
+				templateUrl: 'views/errors/error.template.html',
+				controller: 'OfflineCtrl'
+			}
+		}
+	});
+	$urlRouterProvider.otherwise('/');
+});
