--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -6,16 +6,16 @@
     </center>
     <div class="container-fluid">
         <ul class="nav nav-tabs group tabs">
-            <li ng-class="{active: isSet(1)}"><a href ng-click="setTab(1)">Số hiệu</a></li>
-            <li ng-class="{active: isSet(2)}"><a href ng-click="setTab(2)">Tên mẫu vật</a></li>
-            <li ng-class="{active: isSet(3)}"><a href ng-click="setTab(3)">Số lượng</a></li>
-            <li ng-class="{active: isSet(4)}"><a href ng-click="setTab(4)">DL thu mẫu</a></li>
-            <li ng-class="{active: isSet(5)}"><a href ng-click="setTab(5)">Phân tích mẫu</a></li>
-            <li ng-class="{active: isSet(6)}"><a href ng-click="setTab(6)">Hình ảnh/Phim</a></li>
-            <li ng-class="{active: isSet(7)}"><a href ng-click="setTab(7)">Đặc điểm </a></li>
-            <li ng-class="{active: isSet(8)}"><a href ng-click="setTab(8)">Phân bố/Giá trị</a></li>
-            <li ng-class="{active: isSet(9)}"><a href ng-click="setTab(9)">Lưu trữ/Bảo quản</a></li>
-            <li ng-class="{active: isSet(10)}"><a href ng-click="setTab(10)">Thông tin khác</a></li>
+            <li ng-class="{active: isSet(1)}"><a href ng-click="setTab(1)">{{"tab.soHieu" | translate }}</a></li>
+            <li ng-class="{active: isSet(2)}"><a href ng-click="setTab(2)">{{"tab.tenMauVat" | translate }}</a></li>
+            <li ng-class="{active: isSet(3)}"><a href ng-click="setTab(3)">{{"tab.soLuong" | translate }}</a></li>
+            <li ng-class="{active: isSet(4)}"><a href ng-click="setTab(4)">{{"tab.thuMau" | translate }}</a></li>
+            <li ng-class="{active: isSet(5)}"><a href ng-click="setTab(5)">{{"tab.phanTichMau" | translate }}</a></li>
+            <li ng-class="{active: isSet(6)}"><a href ng-click="setTab(6)">{{"tab.hinhAnh" | translate }}</a></li>
+            <li ng-class="{active: isSet(7)}"><a href ng-click="setTab(7)">{{"tab.dacDiem" | translate }}</a></li>
+            <li ng-class="{active: isSet(8)}"><a href ng-click="setTab(8)">{{"tab.phanBo" | translate }}</a></li>
+            <li ng-class="{active: isSet(9)}"><a href ng-click="setTab(9)">{{"tab.luuTru" | translate }}</a></li>
+            <li ng-class="{active: isSet(10)}"><a href ng-click="setTab(10)">{{"tab.thongTinKhac" | translate }}</a></li>
         </ul>
         <div class="form-group map-detail" ng-show="isSet(1)" style="padding-top: 30px;">
             <div class="row">
