--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -19,6 +19,7 @@ body {
   padding-bottom: 6rem;
   padding-top: 60px;
   min-height: 100%;
+  /*background-image:url("http://traveldilse.com/wp-content/uploads/2014/07/blurred-background-81.jpg");*/
   /*font-family: serif;*/
 }
 
