--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -4,7 +4,7 @@
 		<input type="hidden" name="sample" value="dong-vat" id="sample">
 		<center><h3>Thêm mẫu dữ liệu động vật > Đề tài: {{maDeTai}} </h3></center>
 		<div class="container-fluid">
-			<ul class="nav nav-pills group tabs">
+			<ul class="nav nav-tabs group tabs">
 		    	<li ng-class="{active: isSet(1)}"><a href ng-click="setTab(1)">{{"tab.soHieu" | translate }}</a></li>
 		    	<li ng-class="{active: isSet(2)}"><a href ng-click="setTab(2)">{{"tab.tenMauVat" | translate }}</a></li>
 		    	<li ng-class="{active: isSet(3)}"><a href ng-click="setTab(3)">{{"tab.soLuong" | translate }}</a></li>
