--- a/app/views/users/home.template.html
+++ b/app/views/users/home.template.html
@@ -7,7 +7,7 @@
     } /* Made with http://icomoon.io/ */
 
     .cbp_tmtimeline {
-        margin: 30px 0 0 0;
+        /*margin: 30px 0 0 0;*/
         padding: 0;
         list-style: none;
         position: relative;
@@ -39,12 +39,12 @@
     }
 
     .cbp_tmtimeline > li .cbp_tmtime span:first-child {
-        font-size: 0.9em;
+        font-size: 0.6em;
         color: #FFF;
     }
 
     .cbp_tmtimeline > li .cbp_tmtime span:last-child {
-        font-size: 1.9em;
+        font-size: 1.2em;
         color: #FFF;
     }
 
@@ -58,7 +58,7 @@
         margin: 0 0 15px 25%;
         color: #333;
         padding: 2em;
-        font-size: 1.2em;
+        font-size: 0.9em;
         font-weight: 300;
         line-height: 1.4;
         position: relative;
@@ -98,7 +98,7 @@
         font-weight: normal;
         font-variant: normal;
         text-transform: none;
-        font-size: 1.4em;
+        font-size: 1.0em;
         line-height: 40px;
         -webkit-font-smoothing: antialiased;
         position:relative;
@@ -116,7 +116,7 @@
     @media screen and (max-width: 65.375em) {
 
         .cbp_tmtimeline > li .cbp_tmtime span:last-child {
-            font-size: 1.5em;
+            font-size: 1.1em;
         }
     }
 
@@ -139,7 +139,7 @@
             margin: 0 0 30px 0;
             padding: 1em;
             font-weight: 400;
-            font-size: 95%;
+            font-size: 90%;
         }
 
         .cbp_tmtimeline > li .cbp_tmlabel:after {
@@ -211,7 +211,7 @@
     }
 
     .container > header h1 {
-        font-size: 2.125em;
+        font-size: 1.8em;
         line-height: 1.3;
         margin: 0;
         /*float: left;*/
@@ -318,7 +318,7 @@
                         <time class="cbp_tmtime" datetime="2017-07-08"><span>Tài liệu</span></time>
                         <div class="cbp_tmicon cbp_tmicon-screen"><img src="asset/image/lanyon-logo.png" class="img-responsive" width="40px"></div>
                         <div class="cbp_tmlabel">
-                            <h2>Phần mềm được xây dựng và thiết kế theo chuẩn MVC dựa trên Nodejs phía server và Angularjs phía client</h2>
+                            <h3>Phần mềm được xây dựng và thiết kế theo chuẩn MVC dựa trên Nodejs phía server và Angularjs phía client</h3>
                             <center><h3 style="margin-top: 0;color:#55518a"><a href="asset/document/Huong-dan-nhap-lieu.pdf" download="Huong-dan-nhap-lieu.pdf"><button type="button" class="btn btn-success">Tải xuống</button></a></h3></center>
                         </div>
                     </li>
