--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -117,7 +117,7 @@
 						</div>
 						<div class="col-sm-3">
 							{{"ani.loai" | translate }}: 
-							<div type="text" inline-text-editor context-menu="contextMenu" id="loai" ng-model="data.loai" contentEditable class="inline-text-editor" title="{{tooltips['loai']}}" name="loai"></div>
+							<input type="text" id="loai" ng-model="data.loai" class="input-form form-control" title="{{tooltips['loai']}}" name="loai">
 						</div>
 						<div class="col-sm-3">
 							{{"ani.duoiLoai" | translate }} : 
